# ml-ops

./: .coverage.myMacBookPro_local.pid8235.XBudGr6x.HNQIp837rWOh  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  Repository link.docx  docker-compose.monitoring.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
data/: download_data.py
data/processed/: heart_disease_clean.csv
k8s/: deployment.yaml  service.yaml
models/: best_model.joblib  random_forest.joblib
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  heart_disease_api_dashboard.json
notebooks/: eda.ipynb  inference.ipynb  model_development.ipynb
screenshots/: docker_ps_output.txt  kubernetes_deployment_evidence.txt
src/heart_disease/: data.py  eda.py  features.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_predict.py  test_train.py
