[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-mlops"
version = "0.1.0"
description = "Heart Disease risk prediction MLOps pipeline (AIMLCZG523 Assignment 01)"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Found unknown categories in columns .* during transform:UserWarning",
    "ignore:Unknown solver options.*iprint:scipy.optimize.OptimizeWarning",
    "ignore:Hint. Inferred schema contains integer column:UserWarning",
]
